// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewPasswordInput it runs all common tests is rendered as custom vuetify text field 1`] = `
<password-input-stub
  browserautocomplete="current-password"
  hint=""
  label="New Password"
  name="password"
  persistenthint="true"
  prependicon="vpn_key"
  value=""
>
  <v-progress-linear-stub
    active="true"
    buffervalue="100"
    color="error"
    height="2"
    value="0"
  />
</password-input-stub>
`;

exports[`NewPasswordInput it runs all common tests renders properties sent by parent 1`] = `
<password-input-stub
  :solo="true"
  browserautocomplete="current-password"
  hint=""
  label="New Password"
  name="password"
  persistenthint="true"
  prependicon="vpn_key"
  value=""
>
  <v-progress-linear-stub
    active="true"
    buffervalue="100"
    color="error"
    height="2"
    value="0"
  />
</password-input-stub>
`;
